deploy: htw-imi-showtime/showtime-website@13c4ed0ccf0b9e54182c3daf2661d88389e4e49f

--- a/ss25/bachelor/b5-nexum/index.html
+++ b/ss25/bachelor/b5-nexum/index.html
@@ -498,12 +498,13 @@ B5
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>Slido is a popular platform that adds interactive elements like Q&amp;A, polls, rankings, and ratings to presentations, making it easy for speakers to engage their audience. However, many of its advanced features require a paid subscription, which can limit access.</p>
+        <p>Our project is inspired by Slido, a popular platform that adds low-threshold interactive elements like Q&amp;A, polls, rankings, and ratings to presentations, making it easy for speakers to engage their audience. In contrast, nexum is more focused on providing a smaller feature set which is essential to interactive presentations, without subscription barriers.</p>
 <p>Our project is inspired by Slido but focuses on providing a smaller, free alternative with the core features needed for live interaction. The goal was to build a simple, easy to access tool that supports anonymous participation and real-time feedback, particularly to help improve teaching and presentations without subscription barriers.</p>
+<p>The goal was to build a simple, easy to access tool that supports anonymous participation and real-time feedback, particularly to help improving teaching and presentations without subscription barriers.</p>
 <ul>
 <li><strong>What we wanted to solve</strong></li>
 </ul>
-<p>Many existing tools either come with a steep learning curve or require subscriptions for key features. We wanted to create a straightforward solution that anyone can quickly set up and use, providing the essential functions needed to interact with an audience during live events — without extra hurdles or fees.</p>
+<p>Many existing tools either come with a steep learning curve or require subscriptions for key features. We wanted to create a straightforward, easy-to-use solution that allows everybody to participate in interactions, without cumbersome hurdles like registration or sign in.</p>
 
     </div>
 </section>
@@ -534,10 +535,10 @@ B5
     <div class="content">
         <p>The result is a working web app called <em>Nexum</em>.</p>
 <figure>
-    <img src="/staging/ss25/bachelor/b5-nexum/images/homepage.png" alt="Our Homepage">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/homepage.webp" alt="Our Homepage">
 </figure>
 <figure>
-    <img src="/staging/ss25/bachelor/b5-nexum/images/session.png" alt="An example how a session can look">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/session.webp" alt="An example how a session can look">
 </figure>
 <p>It’s a compact tool that offers:</p>
 <ul>
@@ -546,8 +547,12 @@ B5
 <li>WordClouds</li>
 <li>Open text input</li>
 <li>Rating and ranking polls</li>
-<li>Image polls</li>
+<li>Image polls
+<br></br></li>
+<li>Reusable templates for polls</li>
+<li>Session analytics for deeper insights</li>
 </ul>
+<p>Click <a href="outcome">here</a> for images and some details.</p>
 
     </div>
 </section>
@@ -574,27 +579,27 @@ UI/UX design and frontend feedback</p>
 Team coordination, backend development, server setup and some frontend tasks</p>
 <section class="gallery">
     <figure class="team-member">
-    <img src="/staging/ss25/bachelor/b5-nexum/images/temp_member_image.png" alt="Portrait of Vu Duc Le">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/team/vu.webp" alt="Portrait of Vu Duc Le">
     <figcaption>Vu Duc Le</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ss25/bachelor/b5-nexum/images/temp_member_image.png" alt="Portrait of Andrey Krasavin">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/team/andrey.webp" alt="Portrait of Andrey Krasavin">
     <figcaption>Andrey Krasavin</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ss25/bachelor/b5-nexum/images/temp_member_image.png" alt="Portrait of Daria Myronova">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/team/daria.webp" alt="Portrait of Daria Myronova">
     <figcaption>Daria Myronova</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ss25/bachelor/b5-nexum/images/temp_member_image.png" alt="Portrait of Júlia Vieira de Souza">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/team/julia.webp" alt="Portrait of Júlia Vieira de Souza">
     <figcaption>Júlia Vieira de Souza</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ss25/bachelor/b5-nexum/images/temp_member_image.png" alt="Portrait of Mariia Manzon">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/team/mariia.webp" alt="Portrait of Mariia Manzon">
     <figcaption>Mariia Manzon</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ss25/bachelor/b5-nexum/images/temp_member_image.png" alt="Portrait of Charlotte John">
+    <img src="/staging/ss25/bachelor/b5-nexum/images/team/charlotte.webp" alt="Portrait of Charlotte John">
     <figcaption>Charlotte John</figcaption>
 </figure>
 </section>
