--- a/ss25/bachelor/b5-nexum/outcome/index.html
+++ b/ss25/bachelor/b5-nexum/outcome/index.html
@@ -476,7 +476,7 @@ B5
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        add images&hellip;
+        <em>Nexum</em> is an interactive web app designed to enhance audience engagement during live sessions. It supports a variety of input formats and provides hosts with tools to collect, visualize, and analyze responses in real-time.
     </div>
 </section>
 
@@ -489,20 +489,54 @@ B5
     <div class="spacer"></div>
     <div class="content">
         <ul>
-<li><strong>Open Text polls</strong>
-&hellip;</li>
-<li><strong>Word Cloud polls</strong>
-&hellip;</li>
-<li><strong>Multiple Choice polls</strong>
-&hellip;</li>
-<li><strong>Ranking polls</strong>
-&hellip;</li>
-<li><strong>Rating polls</strong>
-&hellip;</li>
-<li><strong>Image polls</strong>
-&hellip;</li>
-<li><strong>QnA</strong>
-&hellip;</li>
+<li><strong>Open Text polls</strong> – Let participants submit free-form answers for open discussions or brainstorming.</li>
+</ul>
+<figure>
+    <img src="/staging/ss25/bachelor/b5-nexum/images/open_text.webp" alt="Open Text page for Host and Participant">
+</figure>
+<ul>
+<li><strong>Word Cloud polls</strong> – Visualize audience input in a dynamic word cloud.</li>
+</ul>
+<figure>
+    <img src="/staging/ss25/bachelor/b5-nexum/images/word_cloud.webp" alt="Word Cloud page for Host and Participant">
+</figure>
+<ul>
+<li><strong>Multiple Choice polls</strong> – Create quick, structured polls with pre-defined answer options.</li>
+</ul>
+<figure>
+    <img src="/staging/ss25/bachelor/b5-nexum/images/multiple_choice.webp" alt="Multiple Choice page for Host and Participant">
+</figure>
+<ul>
+<li><strong>Ranking polls</strong> – Allow users to sort options by preference or importance.</li>
+</ul>
+<figure>
+    <img src="/staging/ss25/bachelor/b5-nexum/images/ranking.webp" alt="Ranking page for Host and Participant">
+</figure>
+<ul>
+<li><strong>Rating polls</strong> – Collect audience sentiment using star ratings.</li>
+</ul>
+<figure>
+    <img src="/staging/ss25/bachelor/b5-nexum/images/rating.webp" alt="Rating page for Host and Participant">
+</figure>
+<ul>
+<li><strong>Image polls</strong> – Use visual choices for more engaging and intuitive responses.</li>
+</ul>
+<figure>
+    <img src="/staging/ss25/bachelor/b5-nexum/images/image_poll.webp" alt="Image poll page for Host and Participant">
+</figure>
+<ul>
+<li><strong>QnA</strong> – Enable participants to submit and upvote questions in real-time.</li>
+</ul>
+<figure>
+    <img src="/staging/ss25/bachelor/b5-nexum/images/qna.webp" alt="QnA page for Host and Participant">
+</figure>
+<ul>
+<li>
+<p><strong>Analytics</strong> – Get instant feedback and session stats to evaluate engagement.</p>
+</li>
+<li>
+<p><strong>Templates</strong> – Get started quickly with the predefined poll templates.</p>
+</li>
 </ul>
 
     </div>
