--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 10b0816 
+</p><p>AbbreviatedHash: 13c4ed0 
 </p><p>AuthorDate: 2025-07-20 
-</p><p>AuthorEmail: friedrichludwig12@gmail.com 
-</p><p>AuthorName: friedrich-ludwig 
+</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
+</p><p>AuthorName: Charlotte John 
 </p><p>CommitDate: 2025-07-20 
-</p><p>Hash: 10b08163bf625914f87a30b46b73229c4235b826 
-</p><p>Subject: B3 - update _Index.md (#464) 
+</p><p>Hash: 13c4ed0ccf0b9e54182c3daf2661d88389e4e49f 
+</p><p>Subject: B5 nexum - pages for 2nd release train (#465) 
 </p>
 
 
