deploy: htw-imi-showtime/showtime-website@492b16d46a9d03a854c816fb59358957be5017c2

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 13c4ed0 
+</p><p>AbbreviatedHash: 492b16d 
 </p><p>AuthorDate: 2025-07-20 
-</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
-</p><p>AuthorName: Charlotte John 
+</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
+</p><p>AuthorName: lauralgh 
 </p><p>CommitDate: 2025-07-20 
-</p><p>Hash: 13c4ed0ccf0b9e54182c3daf2661d88389e4e49f 
-</p><p>Subject: B5 nexum - pages for 2nd release train (#465) 
+</p><p>Hash: 492b16d46a9d03a854c816fb59358957be5017c2 
+</p><p>Subject: M4 moodle plugin - final version (#466) 
 </p>
 
 
