--- a/ss25/master/m3-civitas/index.html
+++ b/ss25/master/m3-civitas/index.html
@@ -515,9 +515,9 @@ M3
 
 
 <figure>
-    <img src="/staging/ss25/master/m3-civitas/civ_ui_img.jpg" alt="An image showing what the game looks like.">
+    <img src="/staging/ss25/master/m3-civitas/civ_ui_img.jpg" alt="The UI and skill tree of the game.">
 
-<figcaption>A WIP image of the game&#39;s UI.</figcaption>
+<figcaption>The UI and skill tree of the game.</figcaption>
 
 </figure>
 
@@ -568,9 +568,9 @@ M3
 
 
 <figure>
-    <img src="/staging/ss25/master/m3-civitas/civ_img.jpg" alt="An image showing a work in progress state of the game.">
+    <img src="/staging/ss25/master/m3-civitas/civ_img.jpg" alt="A waterside civilisation, listening to the saviour.">
 
-<figcaption>A WIP screenshot of the civilisations.</figcaption>
+<figcaption>A waterside civilisation, listening to the saviour.</figcaption>
 
 </figure>
 
