--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 492b16d 
+</p><p>AbbreviatedHash: fbf6c76 
 </p><p>AuthorDate: 2025-07-20 
-</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
-</p><p>AuthorName: lauralgh 
+</p><p>AuthorEmail: 65015093&#43;LiloTM@users.noreply.github.com 
+</p><p>AuthorName: LiloTM 
 </p><p>CommitDate: 2025-07-20 
-</p><p>Hash: 492b16d46a9d03a854c816fb59358957be5017c2 
-</p><p>Subject: M4 moodle plugin - final version (#466) 
+</p><p>Hash: fbf6c7632dd4683c3156662f4c34f117ca3afcfb 
+</p><p>Subject: M3 Civitas-ImageUpdate (#468) 
 </p>
 
 
