deploy: htw-imi-showtime/showtime-website@4c03cedd8a838199a8535e8ac89fabfc23695c06

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: fbf6c76 
-</p><p>AuthorDate: 2025-07-20 
-</p><p>AuthorEmail: 65015093&#43;LiloTM@users.noreply.github.com 
-</p><p>AuthorName: LiloTM 
-</p><p>CommitDate: 2025-07-20 
-</p><p>Hash: fbf6c7632dd4683c3156662f4c34f117ca3afcfb 
-</p><p>Subject: M3 Civitas-ImageUpdate (#468) 
+</p><p>AbbreviatedHash: 4c03ced 
+</p><p>AuthorDate: 2025-07-21 
+</p><p>AuthorEmail: 149469185&#43;Elociraptor@users.noreply.github.com 
+</p><p>AuthorName: Elociraptor 
+</p><p>CommitDate: 2025-07-21 
+</p><p>Hash: 4c03cedd8a838199a8535e8ac89fabfc23695c06 
+</p><p>Subject: B1 - final version (#470) 
 </p>
 
 
