--- a/ss25/index.html
+++ b/ss25/index.html
@@ -140,11 +140,11 @@
                     <a href="/staging/ss25/bachelor/b1-der-kleine-weg-des-programmierens/">
                     
                         <h3>Der kleine Weg des Programmierens
-                            <span class="project-subtitle"> Website fürs Coderdojo Berlin - für Kinder zum Einstieg ins Programmieren. </span>
+                            <span class="project-subtitle"> JavaScript lernen kinderfreundlich gestaltet. </span>
                         </h3>
                     </a>
                     <p>
-                    Ein kleines Abenteuer für Programmieranfänger.
+                    Mit interaktiven Elementen ermöglichen wir den Kindern des CoderDojo Schöneweide, spielerisch JavaScript von Grund auf zu lernen.
                     
                     </p>
                     <a href="/staging/ss25/bachelor/b1-der-kleine-weg-des-programmierens/">-> Details</a>
