--- a/schedule/index.html
+++ b/schedule/index.html
@@ -142,7 +142,7 @@ a project fair in the afternoon.</p>
             <li>
                 <p>10:05</p>
                 <div class="bachelor">
-                    <h3 class="no-underscore">B1 - Der kleine Weg des Programmierens: Website fürs Coderdojo Berlin - für Kinder zum Einstieg ins Programmieren.</h3>
+                    <h3 class="no-underscore">B1 - Der kleine Weg des Programmierens: JavaScript lernen kinderfreundlich gestaltet.</h3>
                      Bruno Schilling
                     
                     <a href="https://htw-imi-showtime.github.io/staging/ss25/bachelor/b1-der-kleine-weg-des-programmierens/">-> Project_Details</a>
