--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 4c03ced 
+</p><p>AbbreviatedHash: 340c8b5 
 </p><p>AuthorDate: 2025-07-21 
-</p><p>AuthorEmail: 149469185&#43;Elociraptor@users.noreply.github.com 
-</p><p>AuthorName: Elociraptor 
+</p><p>AuthorEmail: 104323196&#43;abductedRhino@users.noreply.github.com 
+</p><p>AuthorName: abductedRhino 
 </p><p>CommitDate: 2025-07-21 
-</p><p>Hash: 4c03cedd8a838199a8535e8ac89fabfc23695c06 
-</p><p>Subject: B1 - final version (#470) 
+</p><p>Hash: 340c8b5216a0d45c418ccb7400610761bb2fbb66 
+</p><p>Subject: B4 - Update urban bio space simulator page (#469) 
 </p>
 
 
