deploy: htw-imi-showtime/showtime-website@5fd57e59c910b2470ce1221bbc5d0dcdf52e2e33

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 340c8b5 
+</p><p>AbbreviatedHash: 5fd57e5 
 </p><p>AuthorDate: 2025-07-21 
-</p><p>AuthorEmail: 104323196&#43;abductedRhino@users.noreply.github.com 
-</p><p>AuthorName: abductedRhino 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-21 
-</p><p>Hash: 340c8b5216a0d45c418ccb7400610761bb2fbb66 
-</p><p>Subject: B4 - Update urban bio space simulator page (#469) 
+</p><p>Hash: 5fd57e59c910b2470ce1221bbc5d0dcdf52e2e33 
+</p><p>Subject: add showtime date ws 
 </p>
 
 
