--- a/dates/index.html
+++ b/dates/index.html
@@ -83,6 +83,15 @@
             </section>
             <hr>
         
+            <section>
+                <div>Friday, 06.02.2026 10:00-15:00</div>
+                <div>
+                    <h3 class="no-underscore">IMI Showtime Winter 2025/2026</h3>
+                    H 001
+                </div>
+            </section>
+            <hr>
+        
     </main>
 <footer>
   
