deploy: htw-imi-showtime/showtime-website@01343116020d5010b9248e983a9ab07c35aa03b8

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5fd57e5 
-</p><p>AuthorDate: 2025-07-21 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-21 
-</p><p>Hash: 5fd57e59c910b2470ce1221bbc5d0dcdf52e2e33 
-</p><p>Subject: add showtime date ws 
+</p><p>AbbreviatedHash: 0134311 
+</p><p>AuthorDate: 2025-07-24 
+</p><p>AuthorEmail: 104323196&#43;abductedRhino@users.noreply.github.com 
+</p><p>AuthorName: abductedRhino 
+</p><p>CommitDate: 2025-07-24 
+</p><p>Hash: 01343116020d5010b9248e983a9ab07c35aa03b8 
+</p><p>Subject: B4 - third release train - link to playstore demo (#473) 
 </p>
 
 
