deploy: htw-imi-showtime/showtime-website@88e3600892117231948eda698a4be20f24ab0529

--- a/ss25/master/m4-moodle-plugin/architecture/index.html
+++ b/ss25/master/m4-moodle-plugin/architecture/index.html
@@ -522,7 +522,7 @@ M4
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        Plugins must follow <strong>Moodle’s technical and organisational guidelines</strong> to qualify for the official plugin directory. Moodle consists of its core with different subsystems and a substantial amount of plugins. These plugins need to be of a specific type. For our plugins these are quiz report and question behaviour. A clear type assignment is essential, because plugins without an unambiguous type cannot be correctly installed or published.
+        Plugins must follow <strong>Moodle’s technical and organisational guidelines</strong> to qualify for the official plugin directory. Moodle consists of its core with different subsystems and a substantial amount of plugins. These plugins need to be of a specific type. For our plugins these are quiz report and question behaviour. A clear type assignment is essential, because only plugins with an unambiguous type can be correctly installed or published.
     </div>
 </section>
 
@@ -534,7 +534,7 @@ M4
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        The standard installation of Moodle already offers a number of question behaviours for tests. <strong>Immediate Feedback</strong> adds a “Check” button after a question so learners can submit each answer and see right away whether it is correct, together with any configured feedback. <strong>Deferred Feedback</strong> hides that button, letting students finish the whole quiz first and revealing correctness and review feedback only after they click “Submit all and finish.” During the research, plugins from the Moodle plugin directory were also identified that are functionally similar to the planned plugin. Another plugin of the question behaviour type is <strong>Certainty Based Marking</strong> (CBM). CBM extends a question with a confidence scale where students rate how sure they are of their answer, and their final score is adjusted by this self-assessment, rewarding accurate confidence judgments.
+        The standard installation of Moodle already offers a number of question behaviours for tests. <strong>Immediate Feedback</strong> adds a “Check” button after a question so learners can submit each answer and see right away whether it is correct, together with any configured feedback. <strong>Deferred Feedback</strong> hides that button, letting students finish the whole quiz first and revealing correctness and review feedback only after they click “Submit all and finish.” During the research, plugins from the Moodle plugin directory were also identified that are functionally similar to the planned plugin.
     </div>
 </section>
 
