--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 0134311 
+</p><p>AbbreviatedHash: 88e3600 
 </p><p>AuthorDate: 2025-07-24 
-</p><p>AuthorEmail: 104323196&#43;abductedRhino@users.noreply.github.com 
-</p><p>AuthorName: abductedRhino 
+</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
+</p><p>AuthorName: lauralgh 
 </p><p>CommitDate: 2025-07-24 
-</p><p>Hash: 01343116020d5010b9248e983a9ab07c35aa03b8 
-</p><p>Subject: B4 - third release train - link to playstore demo (#473) 
+</p><p>Hash: 88e3600892117231948eda698a4be20f24ab0529 
+</p><p>Subject: M4 moodle plugin - Final adjustments by supervisor (#471) 
 </p>
 
 
