deploy: htw-imi-showtime/showtime-website@932ac23e615774588003d15088fe75da3a0adc9c

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 88e3600 
+</p><p>AbbreviatedHash: 932ac23 
 </p><p>AuthorDate: 2025-07-24 
-</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
-</p><p>AuthorName: lauralgh 
+</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
+</p><p>AuthorName: Charlotte John 
 </p><p>CommitDate: 2025-07-24 
-</p><p>Hash: 88e3600892117231948eda698a4be20f24ab0529 
-</p><p>Subject: M4 moodle plugin - Final adjustments by supervisor (#471) 
+</p><p>Hash: 932ac23e615774588003d15088fe75da3a0adc9c 
+</p><p>Subject: B5 - remove accidental duplicate paragraph  (#472) 
 </p>
 
 
