deploy: htw-imi-showtime/showtime-website@2b3a19be90d0e8e3a204ab5fb91bbe8130e9b3f0

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" href="/staging/css/style.min.5b4d0f7c0f71989dd6e2a4cc5a41b7c0ab39e9049c2ccf0f04323f6df904b7ae.css" integrity="sha256-W00PfA9xmJ3W4qTMWkG3wKs56QScLM8PBDI/bfkEt64=" crossorigin="anonymous">
 
 
+<link media="print" rel="stylesheet" href="/staging/css/print.min.cf417ca0b73037607cb96fd33a92efb58db0865aad9878a29610c680c44daa1d.css" integrity="sha256-z0F8oLcwN2B8uW/TOpLvtY2whlqtmHiilhDGgMRNqh0=" crossorigin="anonymous">
+
+
 <script src=https://htw-imi-showtime.github.io/staging/js/title-animate.js charset="utf-8"></script>
 <script src=https://htw-imi-showtime.github.io/staging/js/semester-select.js charset="utf-8"></script>
 <script src=https://htw-imi-showtime.github.io/staging/js/secret.js charset="utf-8"></script>
@@ -36,7 +39,7 @@
              (with drafts)
          </div>  
          
-         <ul>
+         <ul class = "dontprint">
              <li><a href="https://htw-imi-showtime.github.io/staging/projects">Projects</a></li>
              <li><a href="https://htw-imi-showtime.github.io/staging/schedule">Schedule</a></li>
              <li><a href="https://htw-imi-showtime.github.io/staging/dates">Dates</a></li>
@@ -69,13 +72,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 932ac23 
+</p><p>AbbreviatedHash: 2b3a19b 
 </p><p>AuthorDate: 2025-07-24 
-</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
-</p><p>AuthorName: Charlotte John 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-07-24 
-</p><p>Hash: 932ac23e615774588003d15088fe75da3a0adc9c 
-</p><p>Subject: B5 - remove accidental duplicate paragraph  (#472) 
+</p><p>Hash: 2b3a19be90d0e8e3a204ab5fb91bbe8130e9b3f0 
+</p><p>Subject: STW: add print css template 
 </p>
 
 
