--- a/schedule/index.html
+++ b/schedule/index.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" href="/staging/css/style.min.5b4d0f7c0f71989dd6e2a4cc5a41b7c0ab39e9049c2ccf0f04323f6df904b7ae.css" integrity="sha256-W00PfA9xmJ3W4qTMWkG3wKs56QScLM8PBDI/bfkEt64=" crossorigin="anonymous">
 
 
+<link media="print" rel="stylesheet" href="/staging/css/print.min.cf417ca0b73037607cb96fd33a92efb58db0865aad9878a29610c680c44daa1d.css" integrity="sha256-z0F8oLcwN2B8uW/TOpLvtY2whlqtmHiilhDGgMRNqh0=" crossorigin="anonymous">
+
+
 <script src=https://htw-imi-showtime.github.io/staging/js/title-animate.js charset="utf-8"></script>
 <script src=https://htw-imi-showtime.github.io/staging/js/semester-select.js charset="utf-8"></script>
 <script src=https://htw-imi-showtime.github.io/staging/js/secret.js charset="utf-8"></script>
@@ -36,7 +39,7 @@
              (with drafts)
          </div>  
          
-         <ul>
+         <ul class = "dontprint">
              <li><a href="https://htw-imi-showtime.github.io/staging/projects">Projects</a></li>
              <li><a href="https://htw-imi-showtime.github.io/staging/schedule">Schedule</a></li>
              <li><a href="https://htw-imi-showtime.github.io/staging/dates">Dates</a></li>
@@ -71,10 +74,10 @@
     
 
 </span>
-        <span class="underscore-spacer"> </span>
+        <span class="underscore-spacer dontprint"> </span>
     </h1>
-    <section class="underscore">
-        <div class="spacer"></div>
+    <section class="underscore dontprint">
+        <div class="spacer dontprint"></div>
         <p>There will be brief project presentations with a quick Q&amp;A in the morning (very brief presentations, the odd times are real, we might even be a bit quicker than this) and
 a project fair in the afternoon.</p>
 <p>Ort: H 001 / <a href="https://www.htw-berlin.de/campus/campus-wilhelminenhof/">Campus Wilhelminenhof</a></p>
