deploy: htw-imi-showtime/showtime-website@e876cf0b012509775647ca7197935d0960c9d2b5

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -72,13 +72,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 2b3a19b 
-</p><p>AuthorDate: 2025-07-24 
+</p><p>AbbreviatedHash: e876cf0 
+</p><p>AuthorDate: 2025-07-25 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-24 
-</p><p>Hash: 2b3a19be90d0e8e3a204ab5fb91bbe8130e9b3f0 
-</p><p>Subject: STW: add print css template 
+</p><p>CommitDate: 2025-07-25 
+</p><p>Hash: e876cf0b012509775647ca7197935d0960c9d2b5 
+</p><p>Subject: project pitch winter 
 </p>
 
 
