--- a/dates/index.html
+++ b/dates/index.html
@@ -69,19 +69,19 @@
     <main class="dates">
         
             <section>
-                <div>Wednesday, 9.4.2025 12:15 Bachelor, 14:00 Master</div>
+                <div>Friday, 25.7.2025 10:00-15:00</div>
                 <div>
-                    <h3 class="no-underscore">Project Pitches and Team Constitutions Summer 2025</h3>
-                    All projects will be pitched and teams will be formed - Attendance is required for all who want to participate in a project this term!
+                    <h3 class="no-underscore">IMI Showtime Summer 2025</h3>
+                    H 001
                 </div>
             </section>
             <hr>
         
             <section>
-                <div>Friday, 25.7.2025 10:00-15:00</div>
+                <div>Wednesday, 8.10.2025 12:15 Bachelor, 14:00 Master</div>
                 <div>
-                    <h3 class="no-underscore">IMI Showtime Summer 2025</h3>
-                    H 001
+                    <h3 class="no-underscore">Project Pitches and Team Constitutions WS 2025/2026</h3>
+                    All projects will be pitched and teams will be formed - Attendance is required for all who want to participate in a project this term! (Room: TBA)
                 </div>
             </section>
             <hr>
