deploy: htw-imi-showtime/showtime-website@81e2cbdd5e11c2c3f6ef12f8e14ce4921b86ff38

--- a/ss25/master/m1-directors-cut-360/index.html
+++ b/ss25/master/m1-directors-cut-360/index.html
@@ -484,7 +484,7 @@ M1
             </a>
             
             
-            <a class="project-link" href="https://visual-computing.com/">
+            <a class="project-link" href="https://visual-computing.com/projects/directors-cut">
                 <img src = "https://htw-imi-showtime.github.io/staging/img/website.svg" alt="Website Link Icon">
                 Website
             </a>
