--- a/ss25/master/m1-directors-cut-360/tools/index.html
+++ b/ss25/master/m1-directors-cut-360/tools/index.html
@@ -500,7 +500,7 @@ M1
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <h4 id="pyhton">Pyhton</h4>
+        <h4 id="python">Python</h4>
 <p>Python version 3.9.11 and 3.8.20 was used für the scripting.</p>
 <ul>
 <li><a href="https://www.python.org/">Python</a></li>
