--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -72,13 +72,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: e876cf0 
-</p><p>AuthorDate: 2025-07-25 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-07-25 
-</p><p>Hash: e876cf0b012509775647ca7197935d0960c9d2b5 
-</p><p>Subject: project pitch winter 
+</p><p>AbbreviatedHash: 81e2cbd 
+</p><p>AuthorDate: 2025-08-07 
+</p><p>AuthorEmail: 54749299&#43;mcanti1999@users.noreply.github.com 
+</p><p>AuthorName: AntonSch 
+</p><p>CommitDate: 2025-08-07 
+</p><p>Hash: 81e2cbdd5e11c2c3f6ef12f8e14ce4921b86ff38 
+</p><p>Subject: M1 directors cut 360 - final adjustments post showtime (#474) 
 </p>
 
 
