--- a/ss25/master/m1-directors-cut-360/details/index.html
+++ b/ss25/master/m1-directors-cut-360/details/index.html
@@ -481,12 +481,15 @@ M1
         <section>
     <h3>
         
-            Process
+            Development Process
         
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        &hellip;
+        <p>Our project followed an agile development approach. We utilized GitHub Projects to implement a Kanban board, which allowed us to organize our work into, manageable tickets. Each ticket represented a specific task or feature.  The Board consisted of the stages &ldquo;To Do&rdquo;, &ldquo;In Progress&rdquo; to &ldquo;Done,&rdquo; providing us with a good overview of the projects progress. Additionally, we also made a &ldquo;Nice To Have&rdquo; stage for potential new features.</p>
+<p>Initially, we created a comprehensive roadmap that outlined critical milestones for each week. However, as development progressed, we encountered challenges that caused us to fall behind our timeline. The roadmap quickly became outdated as tasks took longer than anticipated, forcing us to adapt our approach. In order to meet our final delivery date, we had to prioritize essential features and work under strict deadlines, which consequently led to a more intense development phase toward the end of the project.</p>
+<p>While our initial planning provided a good foundation, this experience highlighted the importance of building buffer time into project schedules and the reality that development timelines often require flexibility and adjustment.</p>
+
     </div>
 </section>
 
