--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta charset="UTF-8">
 
-<link rel="stylesheet" href="/staging/css/style.min.5b4d0f7c0f71989dd6e2a4cc5a41b7c0ab39e9049c2ccf0f04323f6df904b7ae.css" integrity="sha256-W00PfA9xmJ3W4qTMWkG3wKs56QScLM8PBDI/bfkEt64=" crossorigin="anonymous">
+<link rel="stylesheet" href="/staging/css/style.min.408dbf800d44ea212bdaff161e770e8cafd4e4caa143301c3becbe72c3f02ece.css" integrity="sha256-QI2/gA1E6iEr2v8WHncOjK/U5MqhQzAcO&#43;y&#43;csPwLs4=" crossorigin="anonymous">
 
 
 <link media="print" rel="stylesheet" href="/staging/css/print.min.cf417ca0b73037607cb96fd33a92efb58db0865aad9878a29610c680c44daa1d.css" integrity="sha256-z0F8oLcwN2B8uW/TOpLvtY2whlqtmHiilhDGgMRNqh0=" crossorigin="anonymous">
@@ -39,6 +39,13 @@
              (with drafts)
          </div>  
          
+
+         
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle">
+            <span></span>
+        </label>
+
          <ul class = "dontprint">
              <li><a href="https://htw-imi-showtime.github.io/staging/projects">Projects</a></li>
              <li><a href="https://htw-imi-showtime.github.io/staging/schedule">Schedule</a></li>
@@ -72,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 81e2cbd 
-</p><p>AuthorDate: 2025-08-07 
-</p><p>AuthorEmail: 54749299&#43;mcanti1999@users.noreply.github.com 
-</p><p>AuthorName: AntonSch 
-</p><p>CommitDate: 2025-08-07 
-</p><p>Hash: 81e2cbdd5e11c2c3f6ef12f8e14ce4921b86ff38 
-</p><p>Subject: M1 directors cut 360 - final adjustments post showtime (#474) 
+</p><p>AbbreviatedHash: b3d9ce2 
+</p><p>AuthorDate: 2025-08-08 
+</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
+</p><p>AuthorName: Charlotte John 
+</p><p>CommitDate: 2025-08-08 
+</p><p>Hash: b3d9ce26bf03c3dbbab9b625911a9ed805064a0e 
+</p><p>Subject: STW - add mobile menu toggler (#475) 
 </p>
 
 
