deploy: htw-imi-showtime/showtime-website@d52358f49cc206c41fedbaa43a864e81094883d9

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -56,7 +56,7 @@
              
              <li><a href="https://htw-imi-showtime.github.io/staging/contact">Contact</a></li>
     
-    <li><a href="/staging/">Browse Projects</a></li>
+    <li><a href="/staging/ws25/master/m4-bundesecho/">Browse Projects</a></li>
 
         </ul>
      </nav>
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: cff3a3c 
-</p><p>AuthorDate: 2025-12-18 
-</p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
-</p><p>AuthorName: Charlotte John 
-</p><p>CommitDate: 2025-12-18 
-</p><p>Hash: cff3a3cdacf2335771a788fcde3411dac2e4f75e 
-</p><p>Subject: add content/ws25 and update current_semester 
+</p><p>AbbreviatedHash: d52358f 
+</p><p>AuthorDate: 2026-01-19 
+</p><p>AuthorEmail: 89016793&#43;coderanian@users.noreply.github.com 
+</p><p>AuthorName: K. 
+</p><p>CommitDate: 2026-01-19 
+</p><p>Hash: d52358f49cc206c41fedbaa43a864e81094883d9 
+</p><p>Subject: M4 - Bundesecho - Initial Commit (#487) 
 </p>
 
 
