--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -56,7 +56,7 @@
              
              <li><a href="https://htw-imi-showtime.github.io/staging/contact">Contact</a></li>
     
-    <li><a href="/staging/ws25/master/m4-bundesecho/">Browse Projects</a></li>
+    <li><a href="/staging/ws25/bachelor/b4-imi-map-reloaded/">Browse Projects</a></li>
 
         </ul>
      </nav>
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d52358f 
+</p><p>AbbreviatedHash: 9f98524 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: 89016793&#43;coderanian@users.noreply.github.com 
-</p><p>AuthorName: K. 
+</p><p>AuthorEmail: 74322585&#43;ArtjomSchwenk@users.noreply.github.com 
+</p><p>AuthorName: Arti-S 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: d52358f49cc206c41fedbaa43a864e81094883d9 
-</p><p>Subject: M4 - Bundesecho - Initial Commit (#487) 
+</p><p>Hash: 9f985241e51069986bac443b643d69f5c5d14d77 
+</p><p>Subject: B4 - IMI-Map-reloaded (#486) 
 </p>
 
 
