deploy: htw-imi-showtime/showtime-website@d1e4b29cdf3faf902ad0abf0e488e435466ff783

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 9f98524 
+</p><p>AbbreviatedHash: d1e4b29 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: 74322585&#43;ArtjomSchwenk@users.noreply.github.com 
-</p><p>AuthorName: Arti-S 
+</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
+</p><p>AuthorName: so sa 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: 9f985241e51069986bac443b643d69f5c5d14d77 
-</p><p>Subject: B4 - IMI-Map-reloaded (#486) 
+</p><p>Hash: d1e4b29cdf3faf902ad0abf0e488e435466ff783 
+</p><p>Subject: M1 gradient escape - First Draft of the IMI Showtime Website  (#485) 
 </p>
 
 
