--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d1e4b29 
+</p><p>AbbreviatedHash: 9897f35 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
-</p><p>AuthorName: so sa 
+</p><p>AuthorEmail: alex.lu2002.aa@gmail.com 
+</p><p>AuthorName: AlexAnton21 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: d1e4b29cdf3faf902ad0abf0e488e435466ff783 
-</p><p>Subject: M1 gradient escape - First Draft of the IMI Showtime Website  (#485) 
+</p><p>Hash: 9897f351c3987059912c1719d12dc53a884e9321 
+</p><p>Subject: B6: add base information (#484) 
 </p>
 
 
