deploy: htw-imi-showtime/showtime-website@9be3e41950333883d19df648f0e8e7020a0bce84

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -56,7 +56,7 @@
              
              <li><a href="https://htw-imi-showtime.github.io/staging/contact">Contact</a></li>
     
-    <li><a href="/staging/ws25/bachelor/b4-imi-map-reloaded/">Browse Projects</a></li>
+    <li><a href="/staging/ws25/bachelor/b1-sprachentwicklungsapp/">Browse Projects</a></li>
 
         </ul>
      </nav>
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 9897f35 
+</p><p>AbbreviatedHash: 9be3e41 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: alex.lu2002.aa@gmail.com 
-</p><p>AuthorName: AlexAnton21 
+</p><p>AuthorEmail: thanhngaxle@gmail.com 
+</p><p>AuthorName: Thanaee 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: 9897f351c3987059912c1719d12dc53a884e9321 
-</p><p>Subject: B6: add base information (#484) 
+</p><p>Hash: 9be3e41950333883d19df648f0e8e7020a0bce84 
+</p><p>Subject: B1 - first draft (#483) 
 </p>
 
 
