deploy: htw-imi-showtime/showtime-website@f133a5437c580456fb9b8325b5e236e461679922

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 9be3e41 
+</p><p>AbbreviatedHash: f133a54 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: thanhngaxle@gmail.com 
-</p><p>AuthorName: Thanaee 
+</p><p>AuthorEmail: 167085257&#43;mandyng13@users.noreply.github.com 
+</p><p>AuthorName: mang 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: 9be3e41950333883d19df648f0e8e7020a0bce84 
-</p><p>Subject: B1 - first draft (#483) 
+</p><p>Hash: f133a5437c580456fb9b8325b5e236e461679922 
+</p><p>Subject: B5 - PhysioCoach (First Release) (#482) 
 </p>
 
 
