--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: f133a54 
+</p><p>AbbreviatedHash: 05e1dee 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: 167085257&#43;mandyng13@users.noreply.github.com 
-</p><p>AuthorName: mang 
+</p><p>AuthorEmail: dzemalnulldreinull@gmail.com 
+</p><p>AuthorName: Dzemal030 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: f133a5437c580456fb9b8325b5e236e461679922 
-</p><p>Subject: B5 - PhysioCoach (First Release) (#482) 
+</p><p>Hash: 05e1deeed65c8be331fff9b775e28ce5eec5e758 
+</p><p>Subject: B3 3d design workflow v2 (#481) 
 </p>
 
 
