deploy: htw-imi-showtime/showtime-website@e2d443e32d062ad330b58086b9302d008f9ed1d3

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 05e1dee 
+</p><p>AbbreviatedHash: e2d443e 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: dzemalnulldreinull@gmail.com 
-</p><p>AuthorName: Dzemal030 
+</p><p>AuthorEmail: 167181641&#43;Duaax24@users.noreply.github.com 
+</p><p>AuthorName: Duaa Fourah 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: 05e1deeed65c8be331fff9b775e28ce5eec5e758 
-</p><p>Subject: B3 3d design workflow v2 (#481) 
+</p><p>Hash: e2d443e32d062ad330b58086b9302d008f9ed1d3 
+</p><p>Subject: B2 - food4future AR Campusguide (first release) (#477) 
 </p>
 
 
