deploy: htw-imi-showtime/showtime-website@126b7f5f7785202dc2dcd0d57afff06777d6435a

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: e2d443e 
+</p><p>AbbreviatedHash: 126b7f5 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: 167181641&#43;Duaax24@users.noreply.github.com 
-</p><p>AuthorName: Duaa Fourah 
+</p><p>AuthorEmail: 123155994&#43;David-Brenn@users.noreply.github.com 
+</p><p>AuthorName: David Brenn 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: e2d443e32d062ad330b58086b9302d008f9ed1d3 
-</p><p>Subject: B2 - food4future AR Campusguide (first release) (#477) 
+</p><p>Hash: 126b7f5f7785202dc2dcd0d57afff06777d6435a 
+</p><p>Subject: M2 - Project Site, First Release (#476) 
 </p>
 
 
