--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 126b7f5 
+</p><p>AbbreviatedHash: 8b94886 
 </p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: 123155994&#43;David-Brenn@users.noreply.github.com 
-</p><p>AuthorName: David Brenn 
+</p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
+</p><p>AuthorName: Charlotte John 
 </p><p>CommitDate: 2026-01-19 
-</p><p>Hash: 126b7f5f7785202dc2dcd0d57afff06777d6435a 
-</p><p>Subject: M2 - Project Site, First Release (#476) 
+</p><p>Hash: 8b94886e343d080a271fef70808e53e11351a2f6 
+</p><p>Subject: change trigger for update pr jobs to ws25 
 </p>
 
 
