deploy: htw-imi-showtime/showtime-website@1f3090a0950f4b57b156da6fea6df647084c0670

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8b94886 
-</p><p>AuthorDate: 2026-01-19 
-</p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
-</p><p>AuthorName: Charlotte John 
-</p><p>CommitDate: 2026-01-19 
-</p><p>Hash: 8b94886e343d080a271fef70808e53e11351a2f6 
-</p><p>Subject: change trigger for update pr jobs to ws25 
+</p><p>AbbreviatedHash: 1f3090a 
+</p><p>AuthorDate: 2026-01-24 
+</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
+</p><p>AuthorName: so sa 
+</p><p>CommitDate: 2026-01-24 
+</p><p>Hash: 1f3090a0950f4b57b156da6fea6df647084c0670 
+</p><p>Subject: M1 gradient escape - 2nd release train (#492) 
 </p>
 
 
