--- a/ws25/master/m1-gradient-escape/subpage_techstack/index.html
+++ b/ws25/master/m1-gradient-escape/subpage_techstack/index.html
@@ -573,8 +573,8 @@ M1
 <li><strong>Unity</strong></li>
 </ul>
 <p>Unity (v. 6.2) is a cross-platform game engine that provides a wide range of game development resources, including assets, game objects, and C#. It supports both 2D and 3D game development and offers web builds, making it an excellent option for small projects due to its free usage policy.
-<img src="/ws25/master/m1-gradient-escape/images/logo_unity.png" alt="Unity Logo" title="Unity Logo"></p>
-<p><br><br></p>
+<img src="/ws25/master/m1-gradient-escape/images/unity-logo-b.png" alt="Unity Logo" title="Unity Logo">
+<br><br></p>
 <ul>
 <li><strong>GitHub</strong></li>
 </ul>
@@ -584,9 +584,7 @@ M1
 <ul>
 <li><strong>Buildalon</strong></li>
 </ul>
-<p>Buildalon offers Unity Build Automation designed for Unity developers. Buildalon Runners are CI/CD runners that execute build and test jobs (including Unity builds) in development pipelines, enabling fast and customizable continuous integration and deployment for game projects.
-<img src="/ws25/master/m1-gradient-escape/images/.jpeg" alt="Buildalon" title="Buildalon Logo"></p>
-<p><br><br></p>
+<p>Buildalon offers Unity Build Automation designed for Unity developers. Buildalon Runners are CI/CD runners that execute build and test jobs (including Unity builds) in development pipelines, enabling fast and customizable continuous integration and deployment for game projects.</p>
 
     </div>
 </section>
