deploy: htw-imi-showtime/showtime-website@778add6705990f917cf31f845b298e2a0f819e80

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 1f3090a 
+</p><p>AbbreviatedHash: 778add6 
 </p><p>AuthorDate: 2026-01-24 
-</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
-</p><p>AuthorName: so sa 
+</p><p>AuthorEmail: 123155994&#43;David-Brenn@users.noreply.github.com 
+</p><p>AuthorName: David Brenn 
 </p><p>CommitDate: 2026-01-24 
-</p><p>Hash: 1f3090a0950f4b57b156da6fea6df647084c0670 
-</p><p>Subject: M1 gradient escape - 2nd release train (#492) 
+</p><p>Hash: 778add6705990f917cf31f845b298e2a0f819e80 
+</p><p>Subject: M2 - Second Release (#490) 
 </p>
 
 
