--- a/projects/index.html
+++ b/projects/index.html
@@ -306,7 +306,7 @@
                         </h3>
                     </a>
                     <p>
-                    Wasteland Courier is a VR game that combines physical cycling with an interactive game world.
+                    Wasteland Courier is a VR cycling game that combines physical cycling with an interactive game world.
                     
                     </p>
                     <a href="/staging/ws25/master/m2-cycle-for-your-life/">-> Details</a>
