--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 778add6 
+</p><p>AbbreviatedHash: 62b55db 
 </p><p>AuthorDate: 2026-01-24 
-</p><p>AuthorEmail: 123155994&#43;David-Brenn@users.noreply.github.com 
-</p><p>AuthorName: David Brenn 
+</p><p>AuthorEmail: 167181641&#43;Duaax24@users.noreply.github.com 
+</p><p>AuthorName: Duaa Fourah 
 </p><p>CommitDate: 2026-01-24 
-</p><p>Hash: 778add6705990f917cf31f845b298e2a0f819e80 
-</p><p>Subject: M2 - Second Release (#490) 
+</p><p>Hash: 62b55dbbf971b40550789dfbfb3bf59a7aabda4a 
+</p><p>Subject: B2 food4future ar campusguide second release train (#496) 
 </p>
 
 
