--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 62b55db 
+</p><p>AbbreviatedHash: 37284b2 
 </p><p>AuthorDate: 2026-01-24 
-</p><p>AuthorEmail: 167181641&#43;Duaax24@users.noreply.github.com 
-</p><p>AuthorName: Duaa Fourah 
+</p><p>AuthorEmail: 74322585&#43;ArtjomSchwenk@users.noreply.github.com 
+</p><p>AuthorName: Arti-S 
 </p><p>CommitDate: 2026-01-24 
-</p><p>Hash: 62b55dbbf971b40550789dfbfb3bf59a7aabda4a 
-</p><p>Subject: B2 food4future ar campusguide second release train (#496) 
+</p><p>Hash: 37284b2d91335d57e57cf7dfa2b9ff19d6767c9f 
+</p><p>Subject: B4 - Second Release (#495) 
 </p>
 
 
