deploy: htw-imi-showtime/showtime-website@4d5dff36f1438fd1779518665dd28dddde75fab1

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 37284b2 
+</p><p>AbbreviatedHash: 4d5dff3 
 </p><p>AuthorDate: 2026-01-24 
-</p><p>AuthorEmail: 74322585&#43;ArtjomSchwenk@users.noreply.github.com 
-</p><p>AuthorName: Arti-S 
+</p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
+</p><p>AuthorName: Charlotte John 
 </p><p>CommitDate: 2026-01-24 
-</p><p>Hash: 37284b2d91335d57e57cf7dfa2b9ff19d6767c9f 
-</p><p>Subject: B4 - Second Release (#495) 
+</p><p>Hash: 4d5dff36f1438fd1779518665dd28dddde75fab1 
+</p><p>Subject: update semester in disk-usage.sh 
 </p>
 
 
