--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 4d5dff3 
-</p><p>AuthorDate: 2026-01-24 
-</p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
-</p><p>AuthorName: Charlotte John 
-</p><p>CommitDate: 2026-01-24 
-</p><p>Hash: 4d5dff36f1438fd1779518665dd28dddde75fab1 
-</p><p>Subject: update semester in disk-usage.sh 
+</p><p>AbbreviatedHash: 41d0318 
+</p><p>AuthorDate: 2026-01-25 
+</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
+</p><p>AuthorName: so sa 
+</p><p>CommitDate: 2026-01-25 
+</p><p>Hash: 41d03189b5b6251d5377c0f3ae69848cb63cfd49 
+</p><p>Subject: M1 gradient escape (#500) 
 </p>
 
 
