deploy: htw-imi-showtime/showtime-website@c9a30fb359d4ab90f1ce3a745be52c6a3c32a9c7

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 41d0318 
+</p><p>AbbreviatedHash: c9a30fb 
 </p><p>AuthorDate: 2026-01-25 
-</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
-</p><p>AuthorName: so sa 
+</p><p>AuthorEmail: alex.lu2002.aa@gmail.com 
+</p><p>AuthorName: AlexAnton21 
 </p><p>CommitDate: 2026-01-25 
-</p><p>Hash: 41d03189b5b6251d5377c0f3ae69848cb63cfd49 
-</p><p>Subject: M1 gradient escape (#500) 
+</p><p>Hash: c9a30fb359d4ab90f1ce3a745be52c6a3c32a9c7 
+</p><p>Subject: b6-vikinet second release (#498) 
 </p>
 
 
