deploy: htw-imi-showtime/showtime-website@d8d4dc42ea4c7fd5adcf09ad7e1c7f51028ccd49

--- a/ws25/bachelor/b3-3d-design-workflow/index.html
+++ b/ws25/bachelor/b3-3d-design-workflow/index.html
@@ -593,18 +593,18 @@ B3
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>Hier ein kleiner Einblick über unsere Fertigen Szenen.</p>
+        <p>Hier ein kleiner Einblick über unsere fertigen Szenen.</p>
 <figure>
-    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/Garage.png" alt="Erste Szene Garage">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/garagee.jpg" alt="Erste Szene Garage">
 </figure>
 <figure>
-    <img src="" alt="Zweite Szene ">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/kapelle.jpg" alt="Zweite Szene ">
 </figure>
 <figure>
-    <img src="" alt="Dritte Szene Garage">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/wald.jpg" alt="Dritte Szene Garage">
 </figure>
 <figure>
-    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/Music.png" alt="Letzte Szene">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/studio.jpg" alt="Letzte Szene">
 </figure>
     </div>
 </section>
@@ -623,19 +623,19 @@ B3
 
 <section class="gallery">
     <figure class="team-member">
-    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/Dzem.png" alt="Portrait of Dzemal">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/dzem.jpg" alt="Portrait of Dzemal">
     <figcaption>Dzemal</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/Est.png" alt="Portrait of Estella">
-    <figcaption>Estella</figcaption>
-</figure>
-<figure class="team-member">
-    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/Soph.png" alt="Portrait of Sophy">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/soph.jpg" alt="Portrait of Sophy">
     <figcaption>Sophy</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/Enkh.png" alt="Portrait of Enkhjin">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/est.jpg" alt="Portrait of Estella">
+    <figcaption>Estella</figcaption>
+</figure>
+<figure class="team-member">
+    <img src="/staging/ws25/bachelor/b3-3d-design-workflow/enkh.jpg" alt="Portrait of Enkhjin">
     <figcaption>Enkhjin</figcaption>
 </figure>
 
