--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: c9a30fb 
-</p><p>AuthorDate: 2026-01-25 
-</p><p>AuthorEmail: alex.lu2002.aa@gmail.com 
-</p><p>AuthorName: AlexAnton21 
-</p><p>CommitDate: 2026-01-25 
-</p><p>Hash: c9a30fb359d4ab90f1ce3a745be52c6a3c32a9c7 
-</p><p>Subject: b6-vikinet second release (#498) 
+</p><p>AbbreviatedHash: d8d4dc4 
+</p><p>AuthorDate: 2026-01-26 
+</p><p>AuthorEmail: dzemalnulldreinull@gmail.com 
+</p><p>AuthorName: Dzemal030 
+</p><p>CommitDate: 2026-01-26 
+</p><p>Hash: d8d4dc42ea4c7fd5adcf09ad7e1c7f51028ccd49 
+</p><p>Subject: B3 3d design workflow v2 Bugfix (#493) 
 </p>
 
 
