deploy: htw-imi-showtime/showtime-website@b8ddf3542e2259187664be5863661a9110b9312f

--- a/ws25/bachelor/b5-physiocoach/index.html
+++ b/ws25/bachelor/b5-physiocoach/index.html
@@ -596,6 +596,11 @@ Doch ohne Anleitung ist es oft schwer, diese korrekt durchzuführen oder man ver
     </div>
 </section>
 
+<div style="display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
+  <img src="screenshot-1.png" alt="Wilkommens-Screen" width="220">
+  <img src="screenshot-3.png" alt="Dashboard" width="220">
+  <img src="screenshot-2.png" alt="Symptom-Suche" width="220">
+</div>
 <section>
     <h3>
         
@@ -643,11 +648,11 @@ Ein Großteil der Grundfunktionen, wie die Anzeige und Strukturierung von Übung
 
 <section class="gallery">
     <figure class="team-member">
-    <img src="" alt="Portrait of Khoa Nguyen">
+    <img src="/staging/ws25/bachelor/b5-physiocoach/img2.jpeg" alt="Portrait of Khoa Nguyen">
     <figcaption>Khoa Nguyen</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="" alt="Portrait of Mandy Nguyen">
+    <img src="/staging/ws25/bachelor/b5-physiocoach/img1.jpeg" alt="Portrait of Mandy Nguyen">
     <figcaption>Mandy Nguyen</figcaption>
 </figure>
 
