--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d8d4dc4 
+</p><p>AbbreviatedHash: b8ddf35 
 </p><p>AuthorDate: 2026-01-26 
-</p><p>AuthorEmail: dzemalnulldreinull@gmail.com 
-</p><p>AuthorName: Dzemal030 
+</p><p>AuthorEmail: 167085257&#43;mandyng13@users.noreply.github.com 
+</p><p>AuthorName: mang 
 </p><p>CommitDate: 2026-01-26 
-</p><p>Hash: d8d4dc42ea4c7fd5adcf09ad7e1c7f51028ccd49 
-</p><p>Subject: B3 3d design workflow v2 Bugfix (#493) 
+</p><p>Hash: b8ddf3542e2259187664be5863661a9110b9312f 
+</p><p>Subject: B5 physio coach (#497) 
 </p>
 
 
