deploy: htw-imi-showtime/showtime-website@94aa140383b9d9cb24270bab8b6a9be7c9ea462d

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: b8ddf35 
+</p><p>AbbreviatedHash: 94aa140 
 </p><p>AuthorDate: 2026-01-26 
-</p><p>AuthorEmail: 167085257&#43;mandyng13@users.noreply.github.com 
-</p><p>AuthorName: mang 
+</p><p>AuthorEmail: thanhngaxle@gmail.com 
+</p><p>AuthorName: Thanaee 
 </p><p>CommitDate: 2026-01-26 
-</p><p>Hash: b8ddf3542e2259187664be5863661a9110b9312f 
-</p><p>Subject: B5 physio coach (#497) 
+</p><p>Hash: 94aa140383b9d9cb24270bab8b6a9be7c9ea462d 
+</p><p>Subject: B1 - Second Release (#501) 
 </p>
 
 
